# QuadrupedSearchandRescue

./: README.md  citations.txt  dependencies.repos  test.py
frontier/: package.xml  setup.cfg  setup.py
frontier/config/: frontier.rviz  frontier_only.rviz
frontier/frontier/: frontier.py  frontier_detection.py  frontier_with_facial_detection.py
frontier/launch/: frontier.launch.xml  frontier_detect.launch.xml
go1_description/: CMakeLists.txt  package.xml
go1_description/config/: go1.rviz  go2.rviz
go1_description/launch/: visualize.launch.py
go1_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro
image_detection/: README.md  package.xml  setup.cfg  setup.py
image_detection/image_detection/: face_detect.py  face_finder.py
image_detection/launch/: image_detection.launch.xml
image_yolo/: README.md  package.xml  setup.cfg  setup.py
image_yolo/config/: marker_detect.rviz
image_yolo/image_yolo/: ros_yolo.py
image_yolo/launch/: image_launch.launch.xml  image_launch.xml
test/go1_description/: CMakeLists.txt  package.xml
test/go1_description/config/: params.yaml  slam_params.yaml
test/go1_description/launch/: gazebo.launch.py  launch.xml  load_go1.launch.py
test/go1_description/xacro/: depthCamera.xacro  gazebo.xacro  lidar.xacro  robot.xacro
yolov8_msgs/: CMakeLists.txt  package.xml
