<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_yolo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rahulroy2909@gmail.com">rahulroy</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>yolov8_msgs</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>librealsense2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>realsense2_camera_msgs</depend>

  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
